--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.19",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-geocoder": "^3.27.0",
+    "slugify": "^1.4.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
